Grid and buttons created

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Etch-a-Sketch</title>
-  <link type="text/css" rel="stylesheet" href="./stylesheet.css">
-  <script type="text/javascript" src="./script.js" async defer></script>
+    <meta charset="utf-8">
+    <title>Pathfinding</title>
+    <link type="text/css" rel="stylesheet" href="./stylesheet.css">
+    <script type="text/javascript" src="./script.js" async defer></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 
-<p>Dijkstra's Algorithm</p>
+<body>
+    <div id="header">
+        <p>Dijkstra's Algorithm</p>
+    </div>
+
+    <div id="gridContainer"></div>
+
+    <div id="inputs">
+        <button id="run"><b>Run</b></button>
+        <button id="placeStart" class="tool"">Set Start Position</button>
+        <button id="placeEnd" class="tool">Set End Position</button>
+        <button id="placeWalls" class="tool">Place Walls</button>
+    </div>
+</body>
 
 </html>
