Click registration on grid and buttons

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <button id="placeStart" class="tool"">Set Start Position</button>
         <button id="placeEnd" class="tool">Set End Position</button>
         <button id="placeWalls" class="tool">Place Walls</button>
+        <button id="removeWalls" class="tool">Remove Walls</button>
+        <button id="clear" class="tool">Clear</button>
     </div>
 </body>
 
