Change dimensions and cost labels

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button id="placeWalls" class="tool">Place Walls</button>
         <button id="removeWalls" class="tool">Remove Walls</button>
         <button id="clear" class="tool">Clear</button>
+        <button id="dimensions" class="tool">Change Dimensions</button>
     </div>
 </body>
 
