--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pathfinding</title>
     <link type="text/css" rel="stylesheet" href="./stylesheet.css">
     <script type="text/javascript" src="./script.js" async defer></script>
+    <script type="text/javascript" src="./algorithm.js" async defer></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 
