--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="header">
-        <p>Dijkstra's Algorithm</p>
+        <p>A* Algorithm</p>
     </div>
 
     <div id="gridContainer"></div>
