--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pathfinding</title>
+    <title>A* Pathfinding</title>
     <link type="text/css" rel="stylesheet" href="./stylesheet.css">
     <script type="text/javascript" src="./algorithm.js" async defer></script>
     <script type="text/javascript" src="./script.js" async defer></script>
@@ -12,7 +12,7 @@
 
 <body>
     <div id="header">
-        <p>A* Algorithm</p>
+        <p>A* Pathfinding Algorithm</p>
     </div>
 
     <div id="gridContainer"></div>
